[package]
name = "qweb3"
version = "1.0.0"
edition = "2021"
rust-version = "1.74"
description = "Official Rust client for Quantova, the post-quantum Layer-1 blockchain (the Rust counterpart of qweb3.js and qweb3.py)."
license = "BUSL-1.1"
repository = "https://github.com/Quantova/qweb3-rs"
keywords = ["quantova", "post-quantum", "blockchain", "web3", "sdk"]
categories = ["cryptography::cryptocurrencies", "api-bindings"]

[dependencies]
# JSON-RPC transport
ureq = { version = "2.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# hashing / encoding
sha3 = "0.10"          # SHA3-256 (chain hash)
tiny-keccak = { version = "2.0", features = ["keccak"] }  # keccak-256 (QVM Solidity ABI)
base64 = "0.22"        # canonical Q-address encoding
hex = "0.4"

# error handling
thiserror = "1.0"

# Post-quantum signatures (Dilithium / Falcon / SPHINCS+) via Open Quantum Safe.
# Behind the `pq` feature because it links the native liboqs library.
oqs = { version = "0.11", default-features = false, features = ["dilithium", "falcon", "sphincs"], optional = true }

[features]
# `pq` enables real post-quantum key generation and signing (links liboqs).
# Without it, the address, ABI, QNS, RPC, and fee features all work; only the
# wallet's keygen/sign require `pq`.
default = []
pq = ["dep:oqs"]

[[example]]
name = "address"
path = "examples/address.rs"

[[example]]
name = "connect"
path = "examples/connect.rs"

[[example]]
name = "abi_selectors"
path = "examples/abi_selectors.rs"

[[example]]
name = "qns_resolve"
path = "examples/qns_resolve.rs"

[[example]]
name = "transfer"
path = "examples/transfer.rs"
required-features = ["pq"]
